data/derived/comb/progs/unify/prog5145.ml.out
Characters 69-70:
  | (h,t) -> if t = false then f;;
                               ^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type unit
